server/compilers/goLiteJS/src/test/ml1/valid/return1.go
package main

func a() bool {

	var a = 3;
	if false {
		return true;

	}else if(false) {
		return false;
	}else{
	}
	for ;;{
		return true
	}
	switch a {
		case 1:
			return true;
			break;
		case 2:
			return true;
			break;
		case 3:
			break;
		default:
			break;
	}
}
func main() {
	a();
}


