server/compilers/goLiteJS/src/test/ml1/invalid/func20.go
// anonymous function
package main

f := func() {return}
